--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/eddiecleary/mockup_multipage#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@glidejs/glide": "^3.4.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-changed": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
@@ -33,6 +36,11 @@
     "gulp-util": "^3.0.8",
     "hamburgers": "^1.1.3",
     "imagemin-gifsicle": "^7.0.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "rollup": "^2.26.8",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "tiny-slider": "^2.9.3"
   }
 }
