--- a/package.json
+++ b/package.json
@@ -26,31 +26,22 @@
     "gulp-changed": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
-    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-livereload": "^4.0.2",
-    "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-plumber-notifier": "^0.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-symbols": "^3.2.3",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
     "hamburgers": "^1.1.3",
     "imagemin-gifsicle": "^7.0.0",
     "node-sass": "^4.14.1",
-    "pump": "^3.0.0",
-    "readable-stream": "^3.6.0",
     "rollup": "^2.26.8",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.1",
-    "swiper": "^6.1.2",
-    "terser": "^5.2.1",
-    "tiny-slider": "^2.9.3"
+    "swiper": "^6.1.2"
   },
   "dependencies": {}
 }
