--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/eddiecleary/mockup_multipage#readme",
     "devDependencies": {
         "@glidejs/glide": "^3.4.1",
+        "cssnano": "^4.1.10",
         "hamburgers": "^1.1.3",
         "sass": "^1.32.4",
         "swiper": "^6.1.2"
