--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "gulpfile.js",
     "scripts": {
         "dev": "parcel index.html",
-        "prebuild": "rm -rf dist",
+        "prebuild": "rm -rf dist/& rm -rf .cache",
         "build": "parcel build index.html"
     },
     "repository": {
